apps/yopass/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yopass
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: yopass
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yopass
    spec:
      containers:
        - name: yopass
          image: jhaals/yopass:13.1.0
          args:
            - "--memcached=localhost:11211"
          ports:
            - name: http
              containerPort: 1337
          resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 100m
              memory: 50Mi
        - name: yopass-memcached
          image: memcached:trixie
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          args:
            - "-m 64"
          ports:
            - name: memcached
              containerPort: 11211
