apps/yopass/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yopass
  namespace: yopass
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-edge-gateway
      namespace: cilium-ingress
  hostnames:
    - pastebin.gwg313.xyz
    - pastebin.local.gwg313.xyz
    - pastebin.zerotier.gwg313.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: yopass
          port: 1337
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-yopass
  namespace: yopass

spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium-ingress

  to:
    - group: ""
      kind: Service
      name: yopass
